<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/im_login_illustration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/gdline_login_horizontal_mid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gdline_login_horizontal_top"
        app:srcCompat="@drawable/illustration_welcome" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:text="@string/title_login_page"
        android:textSize="20sp"
        android:textStyle="bold"
        app:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gdline_login_horizontal_mid" />

    <TextView
        android:id="@+id/tv_login_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/message_login_page"
        app:alpha="100"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_title"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_login_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        app:alpha="100"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_message"
        app:layout_constraintStart_toStartOf="@+id/tv_login_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_message"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.kasandi.storyapp.custom.CustomEmailInput
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_login_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0"
        app:alpha="100"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/etl_login_email"
        app:layout_constraintStart_toStartOf="@+id/etl_login_email"
        app:layout_constraintTop_toBottomOf="@+id/etl_login_email"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.kasandi.storyapp.custom.CustomPasswordInputText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:alpha="0"
        android:backgroundTint="@color/dark_navy"
        android:text="@string/login"
        app:alpha="100"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toStartOf="@+id/gdline_login_vertical"
        app:layout_constraintStart_toStartOf="@+id/etl_login_password"
        app:layout_constraintTop_toBottomOf="@+id/etl_login_password" />

    <Button
        android:id="@+id/bt_login_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:backgroundTint="@color/dark_navy"
        android:text="@string/signup"
        app:alpha="100"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/etl_login_password"
        app:layout_constraintStart_toStartOf="@+id/gdline_login_vertical"
        app:layout_constraintTop_toBottomOf="@+id/etl_login_password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdline_login_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdline_login_horizontal_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdline_login_horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />


    <ProgressBar
        android:id="@+id/pb_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>