<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdline_signup_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdline_signup_horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdline_signup_horizontal_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/im_signup_illustration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gdline_signup_horizontal_mid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gdline_signup_horizontal_top"
        app:srcCompat="@drawable/illustration_signup" />

    <TextView
        android:id="@+id/tv_signup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:text="@string/title_signup_page"
        android:textSize="20sp"
        android:textStyle="bold"
        app:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gdline_signup_horizontal_mid" />

    <TextView
        android:id="@+id/tv_signup_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0"
        android:text="@string/message_signup_page"
        app:alpha="100"
        app:layout_constraintEnd_toEndOf="@+id/tv_signup_title"
        app:layout_constraintStart_toStartOf="@+id/tv_signup_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_signup_username"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:hint="@string/name"
        app:alpha="100"
        app:layout_constraintEnd_toEndOf="@+id/tv_signup_message"
        app:layout_constraintStart_toStartOf="@+id/tv_signup_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_message"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_signup_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0"
        android:hint="@string/email"
        app:alpha="100"
        app:layout_constraintEnd_toEndOf="@+id/etl_signup_username"
        app:layout_constraintStart_toStartOf="@+id/etl_signup_username"
        app:layout_constraintTop_toBottomOf="@+id/etl_signup_username"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.kasandi.storyapp.custom.CustomEmailInput
            android:id="@+id/ed_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_signup_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0"
        app:alpha="100"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/etl_signup_email"
        app:layout_constraintStart_toStartOf="@+id/etl_signup_email"
        app:layout_constraintTop_toBottomOf="@+id/etl_signup_email"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.kasandi.storyapp.custom.CustomPasswordInputText
            android:id="@+id/ed_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_signup_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:backgroundTint="@color/dark_navy"
        android:text="@string/signup"
        app:alpha="100"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/etl_signup_password"
        app:layout_constraintStart_toStartOf="@+id/gdline_signup_vertical"
        app:layout_constraintTop_toBottomOf="@+id/etl_signup_password" />

    <ProgressBar
        android:id="@+id/pb_signup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/etl_signup_password"
        app:layout_constraintStart_toStartOf="@+id/etl_signup_password"
        app:layout_constraintTop_toTopOf="@+id/bt_signup_signup" />
</androidx.constraintlayout.widget.ConstraintLayout>